Update Source Code link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#">Link 5</a><br>
             </div>
             <div class="article2">
-                <button><p><a href="#">View Template Source Code</a></p></button>
+                <button><p><a href="https://github.com/lezginskidelight/Hometask1">View Template Source Code</a></p></button>
                 <p> Peace comes from within. Do not seek it without.</p>
                 <p>You will not be punished for your anger, you will be punished by your anger. This, too, will pass. The smaller your reality, the more<br> convinced you are that you know everything. The smaller your reality, the more convinced you are that you know everything. The past<br> has no power over the present moment.</p>
                 <h2>Heading</h2>
